fix css, test JS?

--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apfelstrudel</title>
+    <title>Kochwelt - Apfelstrudel</title>
     <link rel="icon" href="./img/logo_small.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="Style-Felix.css">
    <link rel="stylesheet" href="./style-Odilo.css" /> 
 
 </head>
-
-<body>
-    
-
-      <header class="site-header">
+<body onload="renderPortionen()">
+    <header class="site-header">
         <div class="container header-inner">
-             <a class="brand" href="./index.html">
+            <a class="brand" href="./index.html">
                 <span class="web-logo"><img class="web-logo img" src="./logo.png" alt="Logo"></span>
             </a>
 
-            <button class="nav-toggle" id="navToggle" type="button">
+            <button class="nav-toggle" id="navToggle" type="button" onclick="toggleMenu()">
                 <span></span>
                 <span></span>
                 <span></span>
             </button>
 
             <nav class="nav nav-desktop">
-                <a class="nav-link" href="./index.html">Start</a>
-                <a class="nav-link is-active" href="#">Rezept des Tages</a>
+                <a class="nav-link" href="./index.html#">Start</a>
+                <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
                 <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
                 <a class="nav-link" href="./impressum.html">Impressum</a>
             </nav>
         </div>
-        <div class="nav-overlay" id="navOverlay" hidden></div>
+        <div class="nav-overlay" id="navOverlay" onclick="closeMenu()" hidden></div>
 
         <nav class="nav-drawer" id="mobileMenu" hidden>
-            <a class="nav-link" href="./index.html">Start</a>
-            <a class="nav-link is-active" href="#">Rezept des Tages</a>
+            <a class="nav-link" href="./index.html#">Start</a>
+            <a class="nav-link is-active" href="./index.html#recipe">Rezept des Tages</a>
             <a class="nav-link" href="./Kontakt Formular.html">Kontakt</a>
             <a class="nav-link" href="./impressum.html">Impressum</a>
         </nav>
@@ -58,62 +49,50 @@
             <div class="chip"><span class="chip-icon"><img src="./img/icons/brain-solid.svg" alt="Schwierigkeit"></span><spane>einfach</span></div>
             <div class="chip"><span class="chip-icon"><img src="./img/icons/calendar-alt-regular.svg" alt="Datum"></span><span>08.01.2026</span></div>
         </section>
-
-        <div class="Zutaten">
-            <div class="portionen-rechner">
-                <h3>Zutaten für</h3>
-
-                <input type="number" id="portionen" value="1" min="1" max="20">
-                <div class="button">
-                    <button id="portionen-btn" type="button">Portionen</button>
-                </div>
-            </div>
-            <ul id="zutaten">
-                <li data-menge="250" data-einheit="g" data-name="Mehl" style="background-color: #eee;">
-                    <span class="menge"> 250 g </span>Mehl (glatt)</li>
-                <li data-menge="60" data-einheit="ml" data-name="Öl">
-                <span class="menge">60 ml</span> Öl</li>
-                <li data-menge="1" data-einheit="TL" data-name="Essig" style="background-color: #eee;">
-                    <span class="menge">1 TL</span> Essig</li>
-                <li data-menge="1" data-einheit="TL" data-name="Salz">
-                <span class="menge">1 TL</span> Saltz</li>
-                <li data-menge="125" data-einheit="ml" data-name="Wasser" style="background-color: #eee;">
-                <span class="menge">125 ml</span> Wasser</li>
+        <section class="ingredients">
+         <div class="ingredients-head">
+           <div class="portion-controls">
+            <label class="portion-label" for="portionsInput">Zutaten für</label>
+            <input id="portionen" class="portion-input" type="number" min="1" step="1" value="1" onkeydown="if(event.key==='Enter') update()"/>
+            <button id="portionen-btn" class="portion-btn" type="button" onclick="renderPortionen()">Portionen</button>
+           </div>
+         </div>
+        <ul class="ingredients-list" id="zutaten" data-base-portion="1">
+                <li class="ingredient-item" data-menge="250" data-einheit="g" data-name="Mehl">
+                     250 g </span>Mehl (glatt)</li>
+                <li class="ingredient-item" data-menge="60" data-einheit="ml" data-name="Öl">
+                60 ml Öl</li>
+                <li class="ingredient-item" data-menge="1" data-einheit="TL" data-name="Essig" style="background-color: #eee;">
+                    1 TL Essig</li>
+                <li class="ingredient-item" data-menge="1" data-einheit="TL" data-name="Salz">
+                1 TL Saltz</li>
+                <li class="ingredient-item" data-menge="125" data-einheit="ml" data-name="Wasser" style="background-color: #eee;">
+                125 ml Wasser</li>
                 <h3>Zutaten für die Füllung</h3>
-                <li data-menge="100" data-einheit="g" data-name="Butter" style="background-color: #eee;">
-                <span class="menge">100 g</span> Butter</li>
-                <li data-menge="80" data-einheit="g" data-name="Brösel">
-                    <span class="menge">80 g</span> Brösel</li>
-                <li data-menge="50" data-einheit="g" data-name="Nüsse (gerieben)" style="background-color: #eee;">
-                   <span class="menge">50 g</span> Nüsse (gerieben)</li>
-                <li data-menge="1" data-einheit="Kg" data-name="Äpfel(säuerlich)">
-                    <span class="menge">1 Kg</span> Äpfel (säuerlich)</li>
-                <li data-menge="50" data-einheit="g" data-name="Butter (zum Betäufeln)" style="background-color: #eee;">
-                    <span class="menge">50 g</span> Butter (zum Betäufeln)</li>
-                <li data-menge="100" data-einheit="g" data-name="Kristallzucker">
-                    <span class="menge">100 g</span> Kristallzucker</li>
-                <li data-menge="50" data-einheit="g" data-name="Rosinen" style="background-color: #eee;">
-                <span class="menge">50 g</span> Rosinen</li>
-                <li data-menge="2" data-einheit="TL" data-name="Zimt (Menge nach Beliebig)">
-                <span class="menge">2 TL</span> Zimt (Menge Beliebig)</li>
+                <li class="ingredient-item" data-menge="100" data-einheit="g" data-name="Butter" style="background-color: #eee;">
+                100 g Butter</li>
+                <li class="ingredient-item" data-menge="80" data-einheit="g" data-name="Brösel">
+                    80 g Brösel</li>
+                <li class="ingredient-item" data-menge="50" data-einheit="g" data-name="Nüsse (gerieben)" style="background-color: #eee;">
+                   50 g Nüsse (gerieben)</li>
+                <li class="ingredient-item" data-menge="1" data-einheit="Kg" data-name="Äpfel(säuerlich)">
+                    1 Kg Äpfel (säuerlich)</li>
+                <li class="ingredient-item" data-menge="50" data-einheit="g" data-name="Butter (zum Betäufeln)" style="background-color: #eee;">
+                    50 g Butter (zum Betäufeln)</li>
+                <li class="ingredient-item" data-menge="100" data-einheit="g" data-name="Kristallzucker">
+                    100 g Kristallzucker</li>
+                <li class="ingredient-item" data-menge="50" data-einheit="g" data-name="Rosinen" style="background-color: #eee;">
+                50 g Rosinen</li>
+                <li class="ingredient-item" data-menge="2" data-einheit="TL" data-name="Zimt (Menge nach Beliebig)">
+                2 TL Zimt (Menge Beliebig)</li>
             </ul>
-        </div>
-
-        <div class="HeadlineZubereitung">Zubereitung</div>
-
-        <div class="ZubereitungInfo">
-            <div class="chip">
-                <img class="pill_icon" src="./img/icons/clock-regular.svg">
-                <span>ca. 30 Min.</span>
-            </div>
-
-            <div class="chip">
-                <img class="pill_icon" src="./img/icons/clock-regular.svg">
-                <span>Gesamtzeit ca. 1h</span>
-            </div>
-        </div>
-
-        <ul class="Antleitung">
+        </section>
+        <section class="prep">
+            <h2 class="section-title">Zubereitung</h2>
+                <div class="chip">
+                    <span class="chip-icon"><img src="./img/icons/clock-regular.svg" alt="Zeit"></span><span>ca. 30 Minuten</span>
+                </div>
+        <ol class="prep-text">
             <li>Für den Teig das Mehl auf ein Nudelbrett sieben, in der Mitte eine Grube machen, mit einem Messer
                 Öl, Essig,
                 Salz, Ei und nach und nach lauwarmes Wasser einrühren.</li>
@@ -142,8 +121,9 @@
                 beträufeln, den Strudel locker einrollen, auf ein eingefettetes Backblech legen und bei 180-200°C
                 für ca.
                 30-40 Minuten bei Ober- und Unterhitze backen.</li>
-        </ul>
-         <section class="author">
+        </ol>
+        </section>
+        <section class="author">
             <h3 class="author-title">Rezept erstellt von</h3>
             <div class="author-card">
                     <div class="avatar"><img src="./Felix.jpg" alt="avatar"> </div>
