--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -81,7 +81,7 @@
                     50 g Butter (zum Betäufeln)</li>
                 <li class="ingredient-item" data-menge="100" data-einheit="g" data-name="Kristallzucker">
                     100 g Kristallzucker</li>
-                <li class="ingredient-item" data-menge="50" data-einheit="g" data-name="Rosinen" style=">
+                <li class="ingredient-item" data-menge="50" data-einheit="g" data-name="Rosinen">
                 50 g Rosinen</li>
                 <li class="ingredient-item" data-menge="2" data-einheit="TL" data-name="Zimt" data-note="(Menge Beliebig)">
                 2 TL Zimt (Menge Beliebig)</li>
