--- a/Rezept-Felix.html
+++ b/Rezept-Felix.html
@@ -68,7 +68,7 @@
                 1 TL Saltz</li>
                 <li class="ingredient-item" data-menge="125" data-einheit="ml" data-name="Wasser">
                 125 ml Wasser</li>
-                <h3>Zutaten für die Füllung</h3>
+                <h3 class="ingredients-head">Zutaten für die Füllung</h3>
                 <li class="ingredient-item" data-menge="100" data-einheit="g" data-name="Butter">
                 100 g Butter</li>
                 <li class="ingredient-item" data-menge="80" data-einheit="g" data-name="Brösel">
